[gd_scene load_steps=2 format=3 uid="uid://dbr47ebdjjpnd"]

[ext_resource type="Script" path="res://scenes/game/characters/testing_base_entity/entityTestingUI.gd" id="1_wwkeq"]

[node name="EntityTestingUI" type="Control"]
layout_mode = 3
anchor_right = 0.549
anchor_bottom = 0.285
offset_right = -0.447998
offset_bottom = 0.319977
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wwkeq")

[node name="Health" type="Label" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 149.0
offset_right = 91.0
offset_bottom = 172.0
theme_override_font_sizes/font_size = 18
text = "Health: "

[node name="Rotation" type="Label" parent="."]
layout_mode = 0
offset_left = 424.0
offset_top = 149.0
offset_right = 571.0
offset_bottom = 175.0
theme_override_font_sizes/font_size = 18
text = "0"

[node name="RotationLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 316.0
offset_top = 149.0
offset_right = 444.0
offset_bottom = 172.0
theme_override_font_sizes/font_size = 18
text = "Rotation: "

[node name="Position" type="Label" parent="."]
layout_mode = 0
offset_left = 424.0
offset_top = 100.0
offset_right = 571.0
offset_bottom = 126.0
theme_override_font_sizes/font_size = 18
text = "0"

[node name="PositionLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 316.0
offset_top = 100.0
offset_right = 440.0
offset_bottom = 123.0
theme_override_font_sizes/font_size = 18
text = "Position: "

[node name="Energy" type="Label" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 100.0
offset_right = 93.0
offset_bottom = 123.0
theme_override_font_sizes/font_size = 18
text = "Energy: "

[node name="Button_ApplyDamage" type="Button" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 28.0
offset_right = 150.0
offset_bottom = 69.0
text = "Apply Damage"

[node name="Button_RegenHealth" type="Button" parent="."]
layout_mode = 0
offset_left = 233.0
offset_top = 28.0
offset_right = 399.0
offset_bottom = 69.0
text = "Regenerate"

[node name="Button_UseAbility" type="Button" parent="."]
layout_mode = 0
offset_left = 507.0
offset_top = 28.0
offset_right = 608.0
offset_bottom = 69.0
text = "Use Ability"

[node name="HealthBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 91.0
offset_top = 149.0
offset_right = 282.0
offset_bottom = 176.0

[node name="EnergyBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 91.0
offset_top = 100.0
offset_right = 282.0
offset_bottom = 127.0

[node name="VSeparator" type="VSeparator" parent="."]
layout_mode = 0
offset_left = 299.0
offset_top = 100.0
offset_right = 304.0
offset_bottom = 176.0

[connection signal="pressed" from="Button_ApplyDamage" to="." method="_on_button_apply_damage_pressed"]
[connection signal="pressed" from="Button_RegenHealth" to="." method="_on_button_regen_health_pressed"]
[connection signal="pressed" from="Button_UseAbility" to="." method="_on_button_use_ability_pressed"]
